[project]
name = "YantraSolve"
version = "0.1.0"
requires-python = ">=3.12"
description = "YantraSolve is an automated system that uses LLMs to solve data-driven quizzes. It can fetch, clean, analyze, and visualize data, then submit accurate answers in real-time."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Saumyakumar Chauhan", email = "24f1000666@ds.study.iitm.ac.in" },
]
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.4.2",
    "fastapi[standard]>=0.121.3",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "langchain>=1.0.8",
    "langchain-google-genai>=3.2.0",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.4",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "playwright>=1.56.0",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.4.0",
    "pypdf2>=3.0.1",
    "pyzbar>=0.1.9",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "uvicorn>=0.38.0",
]

[project.urls]
homepage = "https://github.com/saumyakumarchauhan/YantraSolve#readme"
repository = "https://github.com/saumyakumarchauhan/YantraSolve"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "prettier>=0.0.7",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"

[tool.ruff]
extend-exclude = [
  "__pycache__",
  ".venv",
]
